@@ -26,8 +26,21 @@ module Mail
       @address
     end
     
-    def to_s(*args)
-      "#{@info}; #{@date_time.to_s(*args)}"
+    # RFC 4155:
+    #   a timestamp indicating the UTC date and time when the message
+    #   was originally received, conformant with the syntax of the
+    #   traditional UNIX 'ctime' output sans timezone (note that the
+    #   use of UTC precludes the need for a timezone indicator);
+    def formatted_date_time
+      if @date_time.respond_to?(:ctime)
+        @date_time.ctime
+      else
+        @date_time.strftime '%a %b %e %T %Y'
+      end
+    end
+
+    def to_s
+      "#{@address} #{formatted_date_time}"
     end
     
   end
